--- a/package.json
+++ b/package.json
@@ -1,1 +1,21 @@
-{"name":"requestquery","version":"1.0.0","description":"","main":"index.js","scripts":{"start":"node app.js","devStart":"nodemon app.js"},"keywords":[],"author":"","license":"ISC","dependencies":{"cors":"^2.8.5","dotenv":"^16.0.3","express":"^4.18.2","mongoose":"^6.9.2","mongose":"^0.0.2-security","nodemon":"^2.0.20"}}
+{
+  "name": "requestquery",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node app.js",
+    "devStart": "nodemon app.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.9.2",
+    "mongose": "^0.0.2-security",
+    "nodemon": "^2.0.20"
+  }
+}
